erDiagram
    users {
        int id PK "Auto-increment"
        varchar name "NOT NULL, max 100"
        varchar email UK "NOT NULL, unique, indexed"
        varchar password_hash "NOT NULL, bcrypt"
        varchar phone "Nullable"
        varchar role "NOT NULL, default: customer"
        datetime created_at "NOT NULL, default: utcnow"
    }

    barbers {
        int id PK "Auto-increment"
        varchar name "NOT NULL, max 100"
        varchar specialization "Nullable"
        varchar phone "Nullable"
        varchar status "NOT NULL, default: available"
        datetime created_at "NOT NULL, default: utcnow"
    }

    services {
        int id PK "Auto-increment"
        varchar name "NOT NULL, max 100"
        text description "Nullable"
        int duration "NOT NULL, minutes"
        decimal price "NOT NULL, numeric(10,2)"
        varchar status "NOT NULL, default: active"
        datetime created_at "NOT NULL, default: utcnow"
    }

    appointments {
        int id PK "Auto-increment"
        int user_id FK "NOT NULL, FK -> users.id"
        int barber_id FK "NOT NULL, FK -> barbers.id"
        int service_id FK "NOT NULL, FK -> services.id"
        date appointment_date "NOT NULL"
        time appointment_time "NOT NULL"
        varchar status "NOT NULL, default: booked"
        int queue_number "Nullable, per-day sequence"
        datetime created_at "NOT NULL, default: utcnow"
        datetime updated_at "NOT NULL, auto-updated"
    }

    queue {
        int id PK "Auto-increment"
        int appointment_id FK "NOT NULL, unique, FK -> appointments.id"
        int queue_number "NOT NULL, mirror of appointment"
        int estimated_wait_time "Nullable, minutes"
        varchar status "NOT NULL, default: waiting"
        datetime created_at "NOT NULL, default: utcnow"
        datetime updated_at "NOT NULL, auto-updated"
    }

    users ||--o{ appointments : "books (1:N)"
    barbers ||--o{ appointments : "serves (1:N)"
    services ||--o{ appointments : "provides (1:N)"
    appointments ||--o| queue : "has (1:0..1)"

    appointments }o--|| users : "belongs_to"
    appointments }o--|| barbers : "assigned_to"
    appointments }o--|| services : "uses"
    queue }o--|| appointments : "tracks"
